src/styles/Header.scss
@import "./globale";
@import "~bootstrap/scss/buttons";
@import "../assets/style.css";

._sd-navbar {
  position: relative;
  width: 100%;
  padding: 20px 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

._sd-navbar ._sd-navbar-brand {
  justify-self: flex-start;
}

._sd-navbar ._sd-navbar-brand img {
  width: 200px;
}

._sd-navbar ._sd-navbar-menu {
  display: none;
}

._sd-navbar ._sd-navbar-menu.opened {
  list-style: none;
  padding: 0;
  margin: 0;
  background-color: whitesmoke;
  height: 100vh;
  width: 60%;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  display: flex;
  flex-direction: column;
  padding: 40px;
  z-index: 99999;
}

.sd-overlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  width: 40%;
  z-index: 99999;
  background-color: rgba(10, 10, 10, 0.25);
}

._sd-navbar ._sd-navbar-menu li:nth-of-type(1) {
  margin-bottom: 16px;
}

.btn.btn-primary.sd-btn {
  background-color: $primary-color;
  border-radius: 10px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);

  &:hover {
    box-shadow: none;
  }
}

._sd-navbar ._sd-navbar-menu li:nth-of-type(2) a {
  color: $primary-color;
  text-decoration: none;
}

._sd-navbar i.icon-menu {
  font-size: 32px;
  color: $primary-color;
  cursor: pointer;
}

@media only screen and (min-width: 768px) {
  ._sd-navbar ._sd-navbar-menu.opened {
    width: 45%;
  }
  .sd-overlay {
    width: 55%;
  }
}

@media only screen and (min-width: 1024px) {
  ._sd-navbar ._sd-navbar-menu li:nth-of-type(2) {
    margin-left: 8px;
  }

  ._sd-navbar ._sd-navbar-menu li:nth-of-type(1) {
    margin-right: 8px;
    margin-bottom: 0;
  }

  ._sd-navbar ._sd-navbar-brand img {
    width: 250px;
  }

  ._sd-navbar i.icon-menu {
    display: none;
  }

  ._sd-navbar ._sd-navbar-menu {
    display: flex;
    align-items: center;
    padding: 0;
    margin: O;
    list-style: none;
  }
}

